<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center|end"
            android:background="#D2D2D2"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|end"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_CE"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/CE_button"
                android:textSize="36dp" />

            <Button
                android:id="@+id/button_C"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/C_button"
                android:textSize="36dp"
                />


            <Button
                android:id="@+id/buttonBS"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/BS_button"
                android:textSize="36dp" />

            <Button
                android:id="@+id/button_Devide"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/devide_button"
                android:textSize="36dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_7"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_8"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_8"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_9"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_9"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_Multiple"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/multi_button"
                android:textSize="36dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_4"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_5"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_5"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_6"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_6"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_subtract"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/button_subtract"
                android:textSize="36dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_1"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_2"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_2"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_3"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_3"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_Add"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/button_add"
                android:textSize="36dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_special"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/button_special"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_0"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#E5E5E5"
                android:text="@string/button_0"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_dot"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/button_dot"
                android:textSize="36dp"/>

            <Button
                android:id="@+id/button_equal"
                style="?android:attr/buttonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#D2D2D2"
                android:text="@string/button_equal"
                android:textSize="36dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

